# transcription-battle

./: .envrc_sample  .gitignore  README.md  main.py  pyproject.toml
transcription_battle/: deepgram_transcription.py  google_transcription.py
